# mcp-probe

./: .gitignore  .mcp-probe.toml.example  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  SPEC.md  pyproject.toml
.github/: good-first-issues.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md  DELIVERY-PLAN.md  PRD.md  RESEARCH.md  TEST-PLAN.md  demo.md  leaderboard.json  leaderboard.md
scripts/: demo.sh  leaderboard.py
src/mcp_probe/: __init__.py  cli.py  config.py  exit_codes.py  handoff.py  models.py  pipeline.py  tokens.py  trace.py
src/mcp_probe/connect/: __init__.py  client.py  discover.py  transport.py
src/mcp_probe/contract/: __init__.py  schema.py
src/mcp_probe/engines/: __init__.py  base.py  contract.py  cost.py  legibility.py  performance.py  security.py
src/mcp_probe/legibility/: __init__.py  cache.py  lints.py  model.py  similarity.py
src/mcp_probe/perf/: __init__.py  load.py
src/mcp_probe/report/: __init__.py  badge.py  json_emitter.py  render.py
src/mcp_probe/scoring/: __init__.py  scorer.py
src/mcp_probe/security/: __init__.py  adapters.py  patterns.py
src/mcp_probe/snapshot/: __init__.py  store.py
tests/: conftest.py  test_config.py  test_contract.py  test_cost.py  test_e2e.py  test_integration_http.py  test_legibility.py  test_legibility_live.py  test_models.py  test_outputs.py  test_performance.py  test_pipeline.py  test_scorer.py  test_security.py  test_snapshot.py
tests/servers/: bloated_server.py  confusable_server.py  dump.mcp.json  flaky_server.py  good_server.py  http_server.py  injection_server.py  writes_server.py
